tests/core/snapshots/graphql-nested.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "queryNodeA": {
        "name": "nodeA",
        "nodeB": {
          "name": "nodeB"
        },
        "nodeC": {
          "name": "nodeC"
        }
      }
    }
  }
}
