tests/core/snapshots/graphql-over-http-spec.md_17.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 400,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "errors": [
      {
        "message": "Unexpected GraphQL Request: invalid type: sequence, expected a string"
      }
    ]
  }
}
