tests/core/snapshots/graphql-over-http-spec.md_32.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 400,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "errors": [
      {
        "message": "Unexpected GraphQL Request: invalid type: string \"string\", expected a map"
      }
    ]
  }
}
