tests/core/snapshots/graphql-over-http-spec.md_37.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "__type": null
    }
  }
}
