tests/core/snapshots/graphql-over-http-spec.md_38.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/graphql-response+json"
  },
  "body": {
    "data": {
      "__type": null
    }
  }
}
